; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_memory.c_Ext2CheckSetBlock.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_memory.c_Ext2CheckSetBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.buffer_head = type { i64 }

@FALSE = common dso_local global i32 0, align 4
@EXT2_FIRST_DATA_BLOCK = common dso_local global i64 0, align 8
@BLOCKS_PER_GROUP = common dso_local global i32 0, align 4
@TOTAL_BLOCKS = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Ext2CheckSetBlock(i32 %0, %struct.TYPE_5__* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.buffer_head*, align 8
  %10 = alloca %struct.buffer_head*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i64 %2, i64* %7, align 8
  store %struct.buffer_head* null, %struct.buffer_head** %9, align 8
  store %struct.buffer_head* null, %struct.buffer_head** %10, align 8
  %16 = load i32, i32* @FALSE, align 4
  store i32 %16, i32* %15, align 4
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* @EXT2_FIRST_DATA_BLOCK, align 8
  %19 = sub nsw i64 %17, %18
  %20 = trunc i64 %19 to i32
  %21 = load i32, i32* @BLOCKS_PER_GROUP, align 4
  %22 = sdiv i32 %20, %21
  store i32 %22, i32* %11, align 4
  %23 = load i64, i64* %7, align 8
  %24 = load i64, i64* @EXT2_FIRST_DATA_BLOCK, align 8
  %25 = sub nsw i64 %23, %24
  %26 = trunc i64 %25 to i32
  %27 = load i32, i32* @BLOCKS_PER_GROUP, align 4
  %28 = srem i32 %26, %27
  store i32 %28, i32* %12, align 4
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 1
  %31 = load i32, i32* %11, align 4
  %32 = call i32 @ext4_get_group_desc(i32* %30, i32 %31, %struct.buffer_head** %9)
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %8, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %3
  %36 = load i32, i32* @FALSE, align 4
  store i32 %36, i32* %4, align 4
  br label %95

37:                                               ; preds = %3
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 1
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 1
  %42 = load i32, i32* %8, align 4
  %43 = call i32 @ext4_block_bitmap(i32* %41, i32 %42)
  %44 = call %struct.buffer_head* @sb_getblk(i32* %39, i32 %43)
  store %struct.buffer_head* %44, %struct.buffer_head** %10, align 8
  %45 = load i32, i32* %11, align 4
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = sub nsw i32 %49, 1
  %51 = icmp eq i32 %45, %50
  br i1 %51, label %52, label %61

52:                                               ; preds = %37
  %53 = load i32, i32* @TOTAL_BLOCKS, align 4
  %54 = load i32, i32* @BLOCKS_PER_GROUP, align 4
  %55 = srem i32 %53, %54
  store i32 %55, i32* %13, align 4
  %56 = load i32, i32* %13, align 4
  %57 = icmp eq i32 %56, 0
  br i1 %57, label %58, label %60

58:                                               ; preds = %52
  %59 = load i32, i32* @BLOCKS_PER_GROUP, align 4
  store i32 %59, i32* %13, align 4
  br label %60

60:                                               ; preds = %58, %52
  br label %63

61:                                               ; preds = %37
  %62 = load i32, i32* @BLOCKS_PER_GROUP, align 4
  store i32 %62, i32* %13, align 4
  br label %63

63:                                               ; preds = %61, %60
  %64 = load i32, i32* %12, align 4
  %65 = load i32, i32* %13, align 4
  %66 = icmp sge i32 %64, %65
  br i1 %66, label %67, label %71

67:                                               ; preds = %63
  %68 = call i32 @fini_bh(%struct.buffer_head** %9)
  %69 = call i32 @fini_bh(%struct.buffer_head** %10)
  %70 = load i32, i32* @FALSE, align 4
  store i32 %70, i32* %4, align 4
  br label %95

71:                                               ; preds = %63
  %72 = load %struct.buffer_head*, %struct.buffer_head** %10, align 8
  %73 = getelementptr inbounds %struct.buffer_head, %struct.buffer_head* %72, i32 0, i32 0
  %74 = load i64, i64* %73, align 8
  %75 = trunc i64 %74 to i32
  %76 = load i32, i32* %13, align 4
  %77 = call i32 @RtlInitializeBitMap(i32* %14, i32 %75, i32 %76)
  %78 = load i32, i32* %12, align 4
  %79 = call i64 @RtlCheckBit(i32* %14, i32 %78)
  %80 = icmp eq i64 %79, 0
  br i1 %80, label %81, label %88

81:                                               ; preds = %71
  %82 = call i32 (...) @DbgBreak()
  %83 = load i32, i32* %12, align 4
  %84 = call i32 @RtlSetBits(i32* %14, i32 %83, i32 1)
  %85 = load i32, i32* @TRUE, align 4
  store i32 %85, i32* %15, align 4
  %86 = load %struct.buffer_head*, %struct.buffer_head** %10, align 8
  %87 = call i32 @mark_buffer_dirty(%struct.buffer_head* %86)
  br label %88

88:                                               ; preds = %81, %71
  %89 = call i32 @fini_bh(%struct.buffer_head** %9)
  %90 = call i32 @fini_bh(%struct.buffer_head** %10)
  %91 = load i32, i32* %15, align 4
  %92 = icmp ne i32 %91, 0
  %93 = xor i1 %92, true
  %94 = zext i1 %93 to i32
  store i32 %94, i32* %4, align 4
  br label %95

95:                                               ; preds = %88, %67, %35
  %96 = load i32, i32* %4, align 4
  ret i32 %96
}

declare dso_local i32 @ext4_get_group_desc(i32*, i32, %struct.buffer_head**) #1

declare dso_local %struct.buffer_head* @sb_getblk(i32*, i32) #1

declare dso_local i32 @ext4_block_bitmap(i32*, i32) #1

declare dso_local i32 @fini_bh(%struct.buffer_head**) #1

declare dso_local i32 @RtlInitializeBitMap(i32*, i32, i32) #1

declare dso_local i64 @RtlCheckBit(i32*, i32) #1

declare dso_local i32 @DbgBreak(...) #1

declare dso_local i32 @RtlSetBits(i32*, i32, i32) #1

declare dso_local i32 @mark_buffer_dirty(%struct.buffer_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
